# ChangeLog for sci-libs/scipy
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/scipy/ChangeLog,v 1.42 2009/07/21 21:40:03 bicatali Exp $

*scipy-0.7.1 (21 Jul 2009)

  21 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org> +scipy-0.7.1.ebuild:
  Version bump. Better compatibility with python-2.6.

  20 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  scipy-0.6.0-r6.ebuild, scipy-0.7.0.ebuild:
  Fixed swig python deps for newer swig versions (>=1.3.38), closing bug
  #259593

*scipy-0.7.0 (18 Feb 2009)

  18 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -scipy-0.7.0_rc2.ebuild, +scipy-0.7.0.ebuild:
  Version bump

*scipy-0.7.0_rc2 (02 Feb 2009)

  02 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -scipy-0.6.0-r4.ebuild, -scipy-0.6.0-r5.ebuild, -scipy-0.7.0_beta1.ebuild,
  +scipy-0.7.0_rc2.ebuild:
  Version bump, removed older revisions

*scipy-0.6.0-r6 (14 Jan 2009)

  14 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +scipy-0.6.0-r6.ebuild:
  PIC for all arches when FFLAGS are set, and some fixes for atlas.

  11 Dec 2008; Sébastien Fabbro <bicatali@gentoo.org>
  scipy-0.6.0-r5.ebuild, scipy-0.7.0_beta1.ebuild:
  Moved pic flag to src_compile

*scipy-0.7.0_beta1 (05 Dec 2008)
*scipy-0.6.0-r5 (05 Dec 2008)

  05 Dec 2008; Sébastien Fabbro <bicatali@gentoo.org>
  files/scipy-0.6.0-implicit.patch,
  +files/scipy-0.6.0-python-2.6-c_abs.patch, +files/scipy-0.6.0-stsci.patch,
  +files/scipy-0.7.0_beta1-implicit.patch, +scipy-0.6.0-r5.ebuild,
  +scipy-0.7.0_beta1.ebuild:
  Fixed for python-2.6 (bug #245100, thanks Christian Becke for his patch),
  now installs stsci packages, and beta version bump, still masked for
  testing only

  28 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org>
  scipy-0.6.0-r4.ebuild:
  Added virtual/cblas dependency, thanks Michael Davidsaver, bug #244403

  28 Sep 2008; Sébastien Fabbro <bicatali@gentoo.org>
  scipy-0.6.0-r4.ebuild: