@@ -3,6 +3,6 @@ AUX scipy-0.7.0_beta1-implicit.patch 905 RMD160 a22d5b5c7a67b3a806b63d7708654562
 DIST scipy-0.7.0.tar.gz 4636167 RMD160 3583901f679cbc7f91560626f437d7edcd2bf6cf SHA1 7daef781253bafccf3be54b9eb3541f084503076 SHA256 fd788317cee1cd3be91699d88c813ad0d1190131851b04b025ac20a27b60467c
 DIST scipy-0.7.1.tar.gz 4538765 RMD160 b3cb0b40a739cd8b61182f123581d57443b9401a SHA1 ab637e29743cc0c42903a8815043f85d13fb9e42 SHA256 08830d6363a8753ca1376dd22da86d164902711c5feaf0f768b5ee086b3ecd5f
 EBUILD scipy-0.7.0.ebuild 3506 RMD160 f89984f20f171de8489285743a5b33155fa8ea8f SHA1 8fbd4c886377f126275c5865f04d84001f385d41 SHA256 e14948a793b151eca56c4d6ce90a4c3d8b8bb156a1536aa1f70fa5719bd8ded5
-EBUILD scipy-0.7.1.ebuild 3188 RMD160 54857939c2f1c0ad16dbeb5dfe9cf2c2891d6181 SHA1 670d1f6dc4f550e5687ee2486208ef9ea3194cd6 SHA256 06b608d195b926241e978e048057ac5fb10c95985ff56d8c88ed0f83fa61eae8
-MISC ChangeLog 9402 RMD160 ab40b0c4f18e98dcf30db5c6838ef2bf2e1557e7 SHA1 01a727eab3f3cf7d60b0504a57158cf8ff95aa0f SHA256 47b6ad244610e09636f30eeedc0d6f1aee758ae90b34c4e0869d2bf86e197fb0
+EBUILD scipy-0.7.1.ebuild 3431 RMD160 98faf1180e3d339cb0cb9397fce4dd7474e074d0 SHA1 cc7737781f9f3da00214d06e41c70bf9140f3fec SHA256 7447fcb540ee144b5ff1d8f26482ae9b77201cd97b005c7b856daf7423e03574
+MISC ChangeLog 9573 RMD160 affb1b91d4082bf23c3f2658eaf7810590da51ff SHA1 d30dde5e575fae1ee7d9f3446d8a47ec20414944 SHA256 bde74f34ca92f056cb0ae0460fc05dc453399178ce7f1590240a6dcc8f34c394
 MISC metadata.xml 767 RMD160 40e85dc710adf535bdb947cf53cc0b733af047b2 SHA1 6541b0ddce3e394dbf79e86eea36a01bf4f6de55 SHA256 51cab078f50df6606d960384d9e66ccc13a3ba2c3a828c4a83e2c1beaf3116bf
