@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/scipy
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/scipy/ChangeLog,v 1.42 2009/07/21 21:40:03 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/scipy/ChangeLog,v 1.43 2009/09/04 21:31:22 arfrever Exp $
+
+  04 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  scipy-0.7.1.ebuild:
+  Set SUPPORT_PYTHON_ABIS. Tests are restricted so remove "test" USE flag.
 
 *scipy-0.7.1 (21 Jul 2009)
 
